# poly-manifold

./: Cargo.toml  LICENSE  README.md
examples/: dual_numbers.rs  euclidean_gradient_descent.rs  sphere_optimization.rs
poly-manifold-autodiff/: Cargo.toml
poly-manifold-autodiff/src/: dual.rs  gradient.rs  lib.rs  optimizer.rs
poly-manifold-core/: Cargo.toml
poly-manifold-core/src/: error.rs  lib.rs  manifold.rs  metric.rs  tangent.rs
poly-manifold-spaces/: Cargo.toml
poly-manifold-spaces/src/: euclidean.rs  lib.rs  spd.rs  sphere.rs
