[package]
name = "poly-manifold-autodiff"
version = "0.1.0"
edition = "2021"

[dependencies]
poly-manifold-core = { path = "../poly-manifold-core" }
nalgebra = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
poly-manifold-spaces = { path = "../poly-manifold-spaces" }
